--- a/pdp/package.json
+++ b/pdp/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^6.3.0",
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "style-loader": "^3.3.0",
