--- a/cart/package.json
+++ b/cart/package.json
@@ -35,6 +35,7 @@
     "@babel/runtime": "^7.13.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remixicon": "^4.2.0",
     "rxjs": "^7.8.1"
   }
 }
