--- a/home/package.json
+++ b/home/package.json
@@ -6,7 +6,8 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --open --mode development",
-    "start:live": "webpack serve --open --mode development --live-reload --hot"
+    "start:live": "webpack serve --open --mode development --live-reload --hot",
+    "test": "jest"
   },
   "license": "MIT",
   "author": {
@@ -25,6 +26,7 @@
     "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
