--- a/home/package.json
+++ b/home/package.json
@@ -7,7 +7,8 @@
     "build:start": "cd dist && PORT=3000 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot",
-    "test": "jest"
+    "test": "jest",
+    "cy:open": "cypress open"
   },
   "license": "MIT",
   "author": {
